# lady-deirdre

./: 404.html  CNAME  EULA.md  FAQ.md  README.md  documents.html  index.html  introduction.html  overview.html  print.html  searchindex.js  searchindex.json  snippets.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy-user-guide.yml
code-formatters/: code-formatters.html  pretty-printer.html
lexis/: code-inspection.html  lexical-grammar.html  lexis.html  scanning-process.html  site-references.html  source-code.html  token-buffer.html  token-references.html
semantics/: code-diagnostics.html  configuration-issues.html  grammar-setup.html  granularity.html  incremental-computations.html  language-server-design.html  multi-file-analysis.html  partition-into-scopes.html  scope-access.html  semantic-graph.html  semantics.html  side-effects.html  tasks-management.html  the-analyzer.html  tree-index.html
syntax/: debugging.html  error-recovering.html  hand-written-parsers.html  node-references.html  overriding-a-parser.html  pratts-algorithm.html  syntax-grammar.html  syntax-session.html  syntax-tree.html  syntax.html  tree-inspection.html
work/: Cargo.toml  rustfmt.toml
work/book/: book.toml
work/book/src/: SUMMARY.md  documents.md  introduction.md  overview.md  snippets.md
work/book/src/code-formatters/: code-formatters.md  pretty-printer.md
work/book/src/lexis/: code-inspection.md  lexical-grammar.md  lexis.md  scanning-process.md  site-references.md  source-code.md  token-buffer.md  token-references.md
work/book/src/semantics/: code-diagnostics.md  configuration-issues.md  grammar-setup.md  granularity.md  incremental-computations.md  language-server-design.md  multi-file-analysis.md  partition-into-scopes.md  scope-access.md  semantic-graph.md  semantics.md  side-effects.md  tasks-management.md  the-analyzer.md  tree-index.md
work/book/src/syntax/: debugging.md  error-recovering.md  hand-written-parsers.md  node-references.md  overriding-a-parser.md  pratts-algorithm.md  syntax-grammar.md  syntax-session.md  syntax-tree.md  syntax.md  tree-inspection.md
work/crates/derive/: Cargo.toml  readme.md
work/crates/derive/src/: lib.rs
work/crates/derive/src/feature/: input.rs  mod.rs  output.rs
work/crates/derive/src/node/: automata.rs  constructor.rs  generics.rs  globals.rs  index.rs  inheritance.rs  input.rs  leftmost.rs  mod.rs  rule.rs  (+7 more)
work/crates/examples/: Cargo.toml  readme.md
work/crates/examples/benches/: data.rs  frameworks.rs  layer.rs  main.rs
work/crates/examples/benches/frameworks/: nom.rs  ropey.rs  treesitter.rs
work/crates/examples/src/: lib.rs
work/crates/examples/src/chain_analysis/: lexis.rs  mod.rs  semantics.rs  syntax.rs
work/crates/examples/src/expr_parser/: lexis.rs  mod.rs  parser.rs  syntax.rs
work/crates/examples/src/json/: formatter.rs  lexis.rs  mod.rs  syntax.rs
work/crates/examples/src/json_formatter/: formatter.rs  mod.rs
work/crates/examples/src/json_grammar/: lexis.rs  mod.rs  syntax.rs
work/crates/examples/src/json_highlight/: highlighter.rs  mod.rs
work/crates/examples/src/multi_modules/: lexis.rs  mod.rs  semantics.rs  syntax.rs
work/crates/examples/src/shared_semantics/: lexis.rs  mod.rs  semantics.rs  syntax.rs
work/crates/examples/tests/: balance.rs  cluster.rs  cover.rs  document.rs  iteration.rs  json.rs  position.rs  token.rs
work/crates/main/: Cargo.toml  readme.md
work/crates/main/src/: lib.rs  mem.rs  report.rs  std.rs
work/crates/main/src/analysis/: analysis.rs  analyzer.rs  attribute.rs  compute.rs  database.rs  entry.rs  error.rs  features.rs  grammar.rs  lock.rs  manager.rs  memo.rs  mod.rs  mutation.rs  record.rs  result.rs  scope.rs  semantics.rs  signal.rs  slot.rs  table.rs  tasks.rs  validation.rs
work/crates/main/src/arena/: entry.rs  id.rs  mod.rs  readme.md  reference.rs  repo.rs  repository.rs  sequence.rs
work/crates/main/src/compiler/: document.rs  immutable.rs  mod.rs  unit.rs
work/crates/main/src/compiler/mutable/: cursor.rs  lexis.rs  mod.rs  syntax.rs  unit.rs
work/crates/main/src/compiler/mutable/storage/: branch.rs  cache.rs  child.rs  item.rs  mod.rs  nesting.rs  page.rs  references.rs  string.rs  tree.rs  utils.rs
work/crates/main/src/format/: delimited.rs  mod.rs  parse.rs  printer.rs  snippet.rs  string.rs  terminal.rs
work/crates/main/src/incremental/: cursor.rs  document.rs  errors.rs  lexis.rs  mod.rs  syntax.rs  traverse.rs
work/crates/main/src/incremental/storage/: branch.rs  cache.rs  child.rs  item.rs  mod.rs  nesting.rs  page.rs  references.rs  tree.rs  utils.rs
work/crates/main/src/lexis/: buffer.rs  chunks.rs  code.rs  content.rs  cursor.rs  index.rs  lines.rs  mod.rs  position.rs  readme.md  rule.rs  scanners.rs  session.rs  simple.rs  site.rs  span.rs  token.rs  ucd.rs  utils.rs
work/crates/main/src/semantics/: attr.rs  db.rs  mod.rs  record.rs  result.rs
work/crates/main/src/sync/: accumulator.rs  latch.rs  lazy.rs  markers.rs  mod.rs  shared.rs  table.rs  trigger.rs
work/crates/main/src/syntax/: buffer.rs  captures.rs  children.rs  cluster.rs  combinators.rs  content.rs  error.rs  immutable.rs  index.rs  mod.rs  morphism.rs  no.rs  node.rs  observer.rs  parse.rs  readme.md  recovery.rs  rule.rs  session.rs  simple.rs  transducer.rs  tree.rs  void.rs
work/crates/main/src/units/: document.rs  immutable.rs  mod.rs  mutable.rs  unit.rs
work/crates/main/src/units/mutable/: chars.rs  cursor.rs  iters.rs  lexis.rs  mod.rs  syntax.rs  unit.rs  watch.rs  watcher.rs
work/crates/main/src/units/storage/: branch.rs  cache.rs  child.rs  item.rs  mod.rs  nesting.rs  page.rs  references.rs  refs.rs  spread.rs  string.rs  tree.rs  utils.rs
work/crates/main/src/utils/: cluster.rs  mod.rs
work/crates/tests/: Cargo.toml  bench.sh  criterion.toml  readme.md  tables.toml
work/crates/tests/benches/: benches.rs
work/crates/tests/src/: data.rs  gen.rs  lib.rs  lines.rs  logos.rs  nom.rs  scan.rs  ts.rs  visualize.rs
work/crates/ucd/: Cargo.toml  run.sh
work/crates/ucd/src/: download.rs  generate.rs  main.rs  parse.rs
(+69 files in other folders)
