################################################################################
# This file is a part of the "Lady Deirdre" Work,                              #
# a compiler front-end foundation technology.                                  #
#                                                                              #
# This Work is a proprietary software with source available code.              #
#                                                                              #
# To copy, use, distribute, and contribute into this Work you must agree to    #
# the terms of the End User License Agreement:                                 #
#                                                                              #
# https://github.com/Eliah-Lakhin/lady-deirdre/blob/master/EULA.md.            #
#                                                                              #
# The Agreement let you use this Work in commercial and non-commercial         #
# purposes. Commercial use of the Work is free of charge to start,             #
# but the Agreement obligates you to pay me royalties                          #
# under certain conditions.                                                    #
#                                                                              #
# If you want to contribute into the source code of this Work,                 #
# the Agreement obligates you to assign me all exclusive rights to             #
# the Derivative Work or contribution made by you                              #
# (this includes GitHub forks and pull requests to my repository).             #
#                                                                              #
# The Agreement does not limit rights of the third party software developers   #
# as long as the third party software uses public API of this Work only,       #
# and the third party software does not incorporate or distribute              #
# this Work directly.                                                          #
#                                                                              #
# AS FAR AS THE LAW ALLOWS, THIS SOFTWARE COMES AS IS, WITHOUT ANY WARRANTY    #
# OR CONDITION, AND I WILL NOT BE LIABLE TO ANYONE FOR ANY DAMAGES             #
# RELATED TO THIS SOFTWARE, UNDER ANY KIND OF LEGAL CLAIM.                     #
#                                                                              #
# If you do not or cannot agree to the terms of this Agreement,                #
# do not use this Work.                                                        #
#                                                                              #
# Copyright (c) 2022 Ilya Lakhin (Илья Александрович Лахин).                   #
# All rights reserved.                                                         #
################################################################################

[package]
name = "lady-deirdre-examples"
version = "0.0.0"
authors = ["Ilya Lakhin (Илья Александрович Лахин) <eliah.lakhin@gmail.com>"]
edition = "2021"
description = "Compiler front-end foundation technology. Examples crate."
keywords = ["parsing", "perser", "incremental", "compiler", "editor"]
categories = ["compilers", "data-structures", "no-std", "parsing", "text-editors"]
readme="./readme.md"
license-file="../../../EULA.md"
documentation = "https://docs.rs/lady-deirdre"
repository = "https://github.com/Eliah-Lakhin/lady-deirdre"
rust-version = "1.65"
publish = false
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bench]]
name = "main"
harness = false

[[test]]
name = "document"
path = "tests/document.rs"

[[test]]
name = "iteration"
path = "tests/iteration.rs"

[[test]]
name = "position"
path = "tests/position.rs"

[[test]]
name = "token"
path = "tests/token.rs"

[[test]]
name = "json"
path = "tests/json.rs"

[[test]]
name = "balance"
path = "tests/balance.rs"

[dependencies.lady-deirdre]
version = "1.0"
path = "../main"

[dev-dependencies.rand]
version = "0.8"

[dev-dependencies.ropey]
version = "1.5"

[dev-dependencies.nom]
version = "7.1"

[dev-dependencies.tree-sitter]
version = "0.20"

[dev-dependencies.tree-sitter-json]
version = "0.19"

[dev-dependencies.criterion]
version = "0.3"
