################################################################################
# This file is part of "Lady Deirdre", a compiler front-end foundation         #
# technology.                                                                  #
#                                                                              #
# This work is proprietary software with source-available code.                #
#                                                                              #
# To copy, use, distribute, or contribute to this work, you must agree to      #
# the terms of the General License Agreement:                                  #
#                                                                              #
# https://github.com/Eliah-Lakhin/lady-deirdre/blob/master/EULA.md             #
#                                                                              #
# The agreement grants a Basic Commercial License, allowing you to use         #
# this work in non-commercial and limited commercial products with a total     #
# gross revenue cap. To remove this commercial limit for one of your           #
# products, you must acquire a Full Commercial License.                        #
#                                                                              #
# If you contribute to the source code, documentation, or related materials,   #
# you must grant me an exclusive license to these contributions.               #
# Contributions are governed by the "Contributions" section of the General     #
# License Agreement.                                                           #
#                                                                              #
# Copying the work in parts is strictly forbidden, except as permitted         #
# under the General License Agreement.                                         #
#                                                                              #
# If you do not or cannot agree to the terms of this Agreement,                #
# do not use this work.                                                        #
#                                                                              #
# This work is provided "as is", without any warranties, express or implied,   #
# except where such disclaimers are legally invalid.                           #
#                                                                              #
# Copyright (c) 2024 Ilya Lakhin (Илья Александрович Лахин).                   #
# All rights reserved.                                                         #
################################################################################

[package]
name = "lady-deirdre-tests"
version = "0.0.0"
authors = ["Ilya Lakhin (Илья Александрович Лахин) <eliah.lakhin@gmail.com>"]
edition = "2021"
description = "Compiler front-end foundation technology. Examples crate."
keywords = ["parsing", "parser", "incremental", "compiler", "editor"]
categories = ["compilers", "data-structures", "no-std", "parsing", "text-editors"]
readme = "./readme.md"
license-file = "../../../EULA.md"
documentation = "https://docs.rs/lady-deirdre"
repository = "https://github.com/Eliah-Lakhin/lady-deirdre"
rust-version = "1.79"
publish = false
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "visualize"
path = "./src/visualize.rs"

[[bench]]
name = "benches"
harness = false

[dependencies.lady-deirdre]
path = "../main"

[dependencies.lady-deirdre-examples]
path = "../examples"

[dependencies.rand]
version = "0.8"

[dependencies.petname]
version = "2.0"

[dependencies.criterion]
version = "0.5"

[dependencies.dirs]
version = "5.0"

[dependencies.serde]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.nom]
version = "8.0.0-alpha2"

[dependencies.tree-sitter]
version = "0.22"

[dependencies.tree-sitter-json]
version = "0.21"

[dependencies.ropey]
version = "1.6"

[dependencies.logos]
version = "0.14"